# agentlens-observe

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/cmd/: config.go
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  design-guidelines.md  development-roadmap.md  project-changelog.md  project-overview-pdr.md  system-architecture.md
docs/journals/: 2026-02-28.md  2026-03-01-release-orchestration-afternoon.md
examples/: README.md  basic-usage.py  multi-agent.py  requirements.txt  streaming-agent.py
marketing/: publish-commands.md
plans/260228-0816-agentlens-major-upgrade/: plan.md
plans/260228-2212-alerting-agent-behavior-anomalies/: phase-01-alert-models-and-storage.md  phase-02-alert-evaluation-engine.md  phase-03-alert-dashboard-ui.md  phase-04-alert-notifications.md  phase-05-testing.md  plan.md
plans/reports/: brainstormer-260329-1756-killer-features-roadmap.md  code-reviewer-260228-2009-typescript-sdk-review.md  code-reviewer-260329-1953-byo-key-autopsy-mcp-review.md  code-reviewer-260330-0008-security-audit.md  docs-manager-260228-1404-agentlens-v0.2.0-documentation.md  docs-manager-260228-2112-ts-sdk-v040-docs-update.md  (+5 more)
scripts/: capture-demo-screenshots.js
sdk/: pyproject.toml
sdk-ts/: package-lock.json  package.json  tsconfig.json
sdk/agentlens/: __init__.py  cost.py  tracer.py  transport.py
sdk/agentlens/integrations/: __init__.py  crewai.py  langchain.py  mcp.py
sdk/tests/: __init__.py  conftest.py  test_cost.py  test_mcp_integration.py  test_tracer.py  test_transport.py
server/: agentlens.db-shm  agentlens.db-wal  autopsy_analyzer.py  autopsy_models.py  autopsy_routes.py  autopsy_storage.py  crypto.py  diff.py  eval_routes.py  llm_provider.py  main.py  models.py  plugin_loader.py  prompt_storage.py  requirements.txt  settings_models.py  settings_routes.py  settings_storage.py  sse.py  storage.py
site/: package-lock.json
(+44 files in other folders)
