[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens"
version = "0.1.0"
description = "Python SDK for AgentLens — AI agent observability"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.51"]

[project.urls]
Homepage = "https://github.com/user/agentlens"
